Fix overlapping group description (6164)

--- a/css/groups.less
+++ b/css/groups.less
@@ -196,6 +196,10 @@
 	.show-more-details {
 		display: none;
 	}
+
+	.group-description {
+		word-break: break-all;
+	}
 }
 
 .groups-content-region {
